[metadata]
name = profileapp
version = 0.0.0
url = https://taller2airbnb-profile.herokuapp.com/
license = T2
description = Profile Service

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    profileapp
